# dictionary

./: CMakeLists.txt  README.md
doc/: dict文件格式.vsdx  long.txt
src/: CMakeLists.txt
src/dictionary/: CMakeLists.txt  main.cpp
